# stackery

./: .dockerignore  .gitignore  .rgignore  .~lock.uni-documentation.odt#  :w  Cargo.toml  Dockerfile  build.sh  deploy.sh  host-locally.sh  py.py  run.sh  rust-toolchain.toml  rustc-ice-2023-08-12T16:59:05.453040054Z-183675.txt  rustc-ice-2023-08-12T16:59:06.195021261Z-183680.txt  rustc-ice-2023-08-12T16:59:06.195021863Z-183681.txt  rustc-ice-2023-08-12T16:59:06.800782447Z-183686.txt  rustc-ice-2023-08-13T14:00:23.840496976Z-218577.txt  rustc-ice-2023-08-13T14:00:24.514003683Z-218582.txt  rustc-ice-2023-08-13T14:00:24.514003709Z-218583.txt  rustc-ice-2023-08-13T14:00:25.107132847Z-218588.txt  uni-documentation.odt
backend/: Cargo.toml
backend/src/: config.rs  db.rs  endpoints.rs  lib.rs  log.rs  search_client.rs  users.rs
backend/src/endpoints/: health_check.rs  posts.rs  users.rs
backend/src/endpoints/posts/: test.rs
backend/src/endpoints/users/: passwords.rs  session.rs  test.rs
backend/src/users/: test.rs
bf-shared/: Cargo.toml
bf-shared/src/: lib.rs
frontend/: Cargo.toml  Dioxus.toml
frontend/public/: style.css
frontend/public/style/: editor.css  md.css
frontend/src/: api.rs  lib.rs  main.rs  navbar.rs  router.rs
frontend/src/api/: posts.rs  users.rs
frontend/src/pages/: about.md  about.rs  editor.rs  home.md  home.rs  login.rs  mod.rs  post.rs  profile.rs  register.rs  search-help.md  search.rs
frontend/src/pages/editor/: analyzer.rs  display.rs  state.rs
little-md/src/: lib.rs
mini-alloc/: Cargo.toml
mini-alloc/src/: bump.rs  diver.rs  lib.rs
search/: Cargo.toml  Dockerfile
search/src/: main.rs
stac/: ':w  :w  Cargo.toml  README.md  expanded.xtx
stac/crane-backend/: Cargo.toml  a  main.stac  other.stac
stac/crane-backend/print-test-cache/: scc-compile-test-assign_stack  scc-compile-test-bit_struct  scc-compile-test-copy_stack  scc-compile-test-fib  scc-compile-test-minimal  scc-compile-test-multifile  scc-compile-test-sparter_fib  scc-compile-test-stack_struct
stac/crane-backend/src/: compile.rs  gen.rs  lib.rs  main.rs
stac/crane-backend/src/compile/: test.rs
stac/print-test-cache/: delayed::loading  stac-diagnostics-test-just_do_it  stac-diagnostics-test-lot_or_code  stac-graphs-test-complex_cycle  stac-graphs-test-cycle_with_subcycles  stac-graphs-test-no_cycles_ascen  stac-graphs-test-no_cycles_descen  stac-graphs-test-parallel_cycles  stac-graphs-test-self_referential  stac-graphs-test-two_nodes  stac-graphs-test-two_nodes_cycle  stac-instantiate-test-assign_stack  stac-instantiate-test-dead_branch  stac-instantiate-test-early_return  stac-instantiate-test-function_call  stac-instantiate-test-int_size  stac-instantiate-test-is_statement  stac-instantiate-test-local_immutable_var  stac-instantiate-test-local_mutable_var  stac-instantiate-test-multiple_locals  stac-instantiate-test-no_compile_time_mutation  stac-instantiate-test-records  stac-instantiate-test-runtime_if  stac-instantiate-test-simple_fold  stac-instantiate-test-simple_main  stac-instantiate-test-struct_ctor  stac-instrs-emiter_impl-test-array  stac-instrs-emiter_impl-test-control_flow  stac-instrs-emiter_impl-test-imports  stac-instrs-emiter_impl-test-multy_module  stac-instrs-emiter_impl-test-nested_loops  stac-instrs-emiter_impl-test-single_module  stac-instrs-emiter_impl-test-variables  stac-instrs-emiter_impl-test-variables_in_scopes  stac-instrs-test-arguments  stac-instrs-test-function  stac-instrs-test-if_stmt  stac-instrs-test-import  stac-instrs-test-structs  stac-instrs-test-symbol_numbering  (+37 more)
stac/src/: algorithms.rs  cache.rs  diagnostics.rs  errors.rs  graphs.rs  instantiate.rs  instrs.rs  interpreter.rs  layout.rs  lexer.rs  lib.rs  loader.rs  parser.rs  source.rs  storage.rs  temp_mem.rs  types.rs
stac/src/algorithms/: detect_cycles.rs
stac/src/cache/: ast_loader_impl.rs  instr_impl.rs  instrs.rs  loader_impl.rs  parser_impl.rs  scope.rs  storage.rs
stac/src/common_test_cases/: poc.stac
stac/src/instantiate/: interp_impl.rs  layout.rs
stac/src/instrs/: emiter_impl.rs  fmt.rs  instr_emmiter.rs
stac/src/loader/: loader_impl.rs
stac/src/parser/: expr.rs  fmt.rs
stac/src/storage/: refs.rs  scope.rs
stac/src/types/: checker_impl.rs
util/little-md/: Cargo.toml
util/little-md/src/: lib.rs
util/mini-alloc/: Cargo.toml  perf.data  perf.data.old
util/mini-alloc/src/: arena.rs  bump.rs  diver.rs  ident.rs  interner.rs  lib.rs  parallel.rs  seg_vec.rs
util/mini-alloc/src/parallel/: refs.rs
util/print-test/: Cargo.toml  README.md
util/print-test/src/: diff.rs  lib.rs
util/serde-base128/: Cargo.toml
util/serde-base128-derive/: Cargo.toml
util/serde-base128-derive/src/: lib.rs
util/serde-base128/src/: impls.rs  lib.rs  test.rs
util/wasm-emit/: Cargo.toml  build.rs
util/wasm-emit/src/: alloc_stuff.rs  b128.rs  lib.rs  module.rs  sections.rs  tests.rs  vec.rs
wasm-emit/: .gitignore  Cargo.toml  build.rs
wasm-emit/src/: alloc_stuff.rs  b128.rs  lib.rs  module.rs  sections.rs  tests.rs  types.rs  vec.rs
wasm-emit/src/expr/: generated_instrs.rs  mod.rs
