[package]
name = "stackery"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
	"frontend",
	"backend",
	"bf-shared",
	"stac",
	"wasm-emit",
	"little-md",
	"mini-alloc",
]


[profile.release]
panic = "abort"
opt-level = "z"
lto = true
strip = true
codegen-units = 1

[profile.backend]
inherits = "release"
lto = true
opt-level = 3
codegen-units = 1
strip = true
