[workspace]
members = [
	#"frontend",
	#"backend",
	#"bf-shared",
	"stac",
	"stac/crane-backend",
	"util/*",
]
resolver = "2"


[profile.release]
panic = "abort"
opt-level = "z"
lto = true
strip = true
codegen-units = 1

[profile.backend]
inherits = "release"
lto = true
opt-level = 3
codegen-units = 1
strip = true

[profile.test]
debug = true
opt-level = 3
