[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "backend"
path = "src/lib.rs"

[[bin]]
name = "backend"
path = "src/main.rs"

[dependencies]
bcrypt = "0.14.0"
mongodb = "2.4.0"
poem = { version = "1.3.55", features = ["session", "cookie", "test", "static-files"] }
poem-openapi = { version = "2.0.26", features = ["swagger-ui"] }
serde = { version = "1.0.160", features = ["derive"] }
slog = "2.7.0"
slog-async = "2.7.0"
slog-json = "2.6.1"
tokio = { version = "1.27.0", features = ["macros", "rt-multi-thread", "parking_lot"] }
uuid = { version = "1.3.1", features = ["v4"] }
tonic = { version = "0.9.1", features = ["tls"] }
meilisearch-sdk = "0.23.0"
bf-shared = { path = "../bf-shared", features = ["open-api"] }

[dev-dependencies]
mockall = "0.11.4"
mockall_double = "0.3.0"
