[package]
name = "bf-shared"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
open-api = ["poem-openapi"]

[dependencies]
poem-openapi = { version = "2.0.26", optional = true }
serde = { version = "1.0.160", features = ["derive"] }
