[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "frontend"
path = "src/lib.rs"

[[bin]]
name = "frontend"
path = "src/main.rs"

[dependencies]
dioxus = { git = "https://github.com/DioxusLabs/dioxus" }
dioxus-logger = "0.3.0"
dioxus-router = { git = "https://github.com/DioxusLabs/dioxus" }
dioxus-web = { git = "https://github.com/DioxusLabs/dioxus" } 
log = "0.4.17"
reqwest = { version = "0.11.16", features = ["json"] }
thiserror = "1.0.40"
web-sys = "0.3.61"
