[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "frontend"
path = "src/lib.rs"

[[bin]]
name = "frontend"
path = "src/main.rs"

[dependencies]
dioxus = { git = "https://github.com/DioxusLabs/dioxus" }
dioxus-logger = "0.3.0"
dioxus-web = { git = "https://github.com/DioxusLabs/dioxus" } 
log = "0.4.17"
reqwest = { version = "0.11.16", features = ["json"] }
thiserror = "1.0.40"
web-sys = "0.3.61"
bf-shared = { path = "../bf-shared" }
stac = { path = "../stac" }
serde = { version = "1.0.160", features = ["derive"] }

getrandom = { version = "0.2.9", features = ["js"] }
base64 = "0.21.0"
bcrypt = "0.14.0"
html-escape = "0.2.13"
