[package]
name = "search"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bf-shared = { version = "0.1.0", path = "../bf-shared" }
meilisearch-sdk = "0.23.1"
mongodb = "2.5.0"
serde = "1.0.163"
tokio = "1.28.1"
