[package]
name = "stac"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
logos = "0.13.0"
mini-alloc = { path = "../util/mini-alloc", features = ["serde128"] }
print-test = { version = "0.1.0", path = "../util/print-test" }
serde-base128 = { version = "0.1.0", path = "../util/serde-base128" }

[dev-dependencies]
async-timer = "0.7.4"
pollster = "0.3.0"
