[package]
name = "wasm_emit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[features]
default = ["alloc"]
alloc = []

[dev-dependencies]
wasmparser = "0.104.0"

# [build-dependencies]
# document_tree = "0.4.0"
# rst_parser = "0.4.0"
