[package]
name = "mini-alloc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
serde128 = ["serde-base128"]

[dependencies]
hashbrown = { version = "0.13.2", features = ["nightly"] }
serde-base128 = { path = "../serde-base128", optional = true }
